Fix decomposition of f result to reflect unambiguous ids