@@ -52,7 +52,8 @@ import operator
 from functools import reduce
 from typing import Dict, Union
 
-from garoupa import Hosh, rho_elem, removal_elem
+from garoupa import Hosh, removal_elem
+
 from idict.core.frozenidentifieddict import FrozenIdentifiedDict
 from idict.core.identification import fhosh, blobs_hashes_hoshes
 from idict.parameter.ilet import iLet
@@ -112,7 +113,7 @@ def application(self: FrozenIdentifiedDict, other, f, config_hosh, output=None):
         for i, k in enumerate(outputs):
             newdata[k] = frozen.data[k]
             if i &lt; noutputs - 1:
-                field_hosh = ufu_1 * rho_elem(c)
+                field_hosh = Hosh(f&#34;{ufu_1.id}-{c}&#34;.encode())
                 c += 1
                 acc *= field_hosh
             else:
@@ -305,8 +306,8 @@ def solve(hoshes, output, uf: Hosh):
         &#34;z&#34;: 1,
         &#34;_id&#34;: &#34;JN-puhssoMO2iTwz8coREZG5ts9KdJ-3GBbIubB7&#34;,
         &#34;_ids&#34;: {
-            &#34;x&#34;: &#34;0216.kBAcz301hb6vAa56OI8ijFgaJH7prk5D0Aq&#34;,
-            &#34;y&#34;: &#34;FbwPhhohM9oJ2RiZe6NOVCGxpc5Z-6jYgymCTa1J&#34;,
+            &#34;x&#34;: &#34;ypDxvzf3UHQIWNGWB2p5swFgn9eQOGOx5aS5yOxs&#34;,
+            &#34;y&#34;: &#34;oDP6ovudiaAlc2aJ3JoN6tu913zpm9cyAPQBYo3H&#34;,
             &#34;w&#34;: &#34;Tr_9c39277012db0264069f5c777cdf5ae3c57bc (content: -B_305c3d0e44c94a5418d982f7dfe8a537a5c4b)&#34;,
             &#34;z&#34;: &#34;fA_f76604de6c618f2740bd6cf44b16673648837 (content: l8_09c7059156c4ed2aea46243e9d4b36c01f272)&#34;
         }
@@ -424,7 +425,7 @@ True
         for i, k in enumerate(outputs):
             newdata[k] = frozen.data[k]
             if i &lt; noutputs - 1:
-                field_hosh = ufu_1 * rho_elem(c)
+                field_hosh = Hosh(f&#34;{ufu_1.id}-{c}&#34;.encode())
                 c += 1
                 acc *= field_hosh
             else:
@@ -748,8 +749,8 @@ True
     &quot;z&quot;: 1,
     &quot;_id&quot;: &quot;JN-puhssoMO2iTwz8coREZG5ts9KdJ-3GBbIubB7&quot;,
     &quot;_ids&quot;: {
-        &quot;x&quot;: &quot;0216.kBAcz301hb6vAa56OI8ijFgaJH7prk5D0Aq&quot;,
-        &quot;y&quot;: &quot;FbwPhhohM9oJ2RiZe6NOVCGxpc5Z-6jYgymCTa1J&quot;,
+        &quot;x&quot;: &quot;ypDxvzf3UHQIWNGWB2p5swFgn9eQOGOx5aS5yOxs&quot;,
+        &quot;y&quot;: &quot;oDP6ovudiaAlc2aJ3JoN6tu913zpm9cyAPQBYo3H&quot;,
         &quot;w&quot;: &quot;Tr_9c39277012db0264069f5c777cdf5ae3c57bc (content: -B_305c3d0e44c94a5418d982f7dfe8a537a5c4b)&quot;,
         &quot;z&quot;: &quot;fA_f76604de6c618f2740bd6cf44b16673648837 (content: l8_09c7059156c4ed2aea46243e9d4b36c01f272)&quot;
     }
@@ -803,8 +804,8 @@ True
         &#34;z&#34;: 1,
         &#34;_id&#34;: &#34;JN-puhssoMO2iTwz8coREZG5ts9KdJ-3GBbIubB7&#34;,
         &#34;_ids&#34;: {
-            &#34;x&#34;: &#34;0216.kBAcz301hb6vAa56OI8ijFgaJH7prk5D0Aq&#34;,
-            &#34;y&#34;: &#34;FbwPhhohM9oJ2RiZe6NOVCGxpc5Z-6jYgymCTa1J&#34;,
+            &#34;x&#34;: &#34;ypDxvzf3UHQIWNGWB2p5swFgn9eQOGOx5aS5yOxs&#34;,
+            &#34;y&#34;: &#34;oDP6ovudiaAlc2aJ3JoN6tu913zpm9cyAPQBYo3H&#34;,
             &#34;w&#34;: &#34;Tr_9c39277012db0264069f5c777cdf5ae3c57bc (content: -B_305c3d0e44c94a5418d982f7dfe8a537a5c4b)&#34;,
             &#34;z&#34;: &#34;fA_f76604de6c618f2740bd6cf44b16673648837 (content: l8_09c7059156c4ed2aea46243e9d4b36c01f272)&#34;
         }
