@@ -88,7 +88,7 @@ def Xy2M(input=[&#34;X&#34;, &#34;y&#34;], output=&#34;M&#34;, **kwargs):
     &#34;&#34;&#34;
     import numpy
 
-    return {output: numpy.column_stack((kwargs[input[0]], kwargs[input[1]]))}
+    return {output: numpy.column_stack((kwargs[input[0]], kwargs[input[1]])), &#34;_history&#34;: ...}
 
 
 def df2Xy(input=&#34;df&#34;, Xout=&#34;X&#34;, yout=&#34;y&#34;, **kwargs):
@@ -104,9 +104,9 @@ def df2Xy(input=&#34;df&#34;, Xout=&#34;X&#34;, yout=&#34;y&#34;, **kwargs):
         &#34;df&#34;: &#34;«{&#39;attr1@REAL&#39;: {0: 5.1, 1: 3.1}, &#39;attr2@REAL&#39;: {0: 3.5, 1: 4.5}, &#39;class@{0,1}&#39;: {0: &#39;0&#39;, 1: &#39;1&#39;}}»&#34;,
         &#34;_id&#34;: &#34;0GLFP05fQeW7dVFF0m50N8yVTgl-1.0.1--df2Xy&#34;,
         &#34;_ids&#34;: {
-            &#34;X&#34;: &#34;hooghJAIuzoXue9tSVrWrU9ek4Rw--J2NP7DnTVR&#34;,
-            &#34;y&#34;: &#34;UldviM8Kn.smh66ZP7X-D9M1k9IQ4M0DmL6B58PJ&#34;,
-            &#34;_history&#34;: &#34;5ItBBxGIMLsBTpdvIGaFHpdkk.2ERtilWaL0O2e.&#34;,
+            &#34;X&#34;: &#34;NeRaymrp6pcRWPAFc4t8A9.BnboEM0.1BllNL8yo&#34;,
+            &#34;y&#34;: &#34;BLW9uncfc4h7G4e1lK66TjtG5bj6uMX2oEJxZBbm&#34;,
+            &#34;_history&#34;: &#34;wfGnutW0WADjXhbuxxKPp5WD5po2Jk6W4srWxjdQ&#34;,
             &#34;df&#34;: &#34;q3_b71eb05c4be05eba7b6ae5a9245d5dd70b81b (content: 6X_dc8ccea3b2e46f1c78967fae98b692701dc99)&#34;
         }
     }
@@ -134,8 +134,8 @@ def df2arff(input=&#34;df&#34;, output=&#34;arff&#34;, **kwargs):
         &#34;df&#34;: &#34;«{&#39;attr1@REAL&#39;: {0: 5.1, 1: 3.1}, &#39;attr2@REAL&#39;: {0: 3.5, 1: 4.5}, &#39;class@{0,1}&#39;: {0: &#39;0&#39;, 1: &#39;1&#39;}}»&#34;,
         &#34;_id&#34;: &#34;Ojq9k7ZSbVjwLGlZ7uuqIyhoJPo.p36mAmav2Wul&#34;,
         &#34;_ids&#34;: {
-            &#34;a&#34;: &#34;yfX.AOVXE2hlKyGKeGZ3Klpi3LYxm3PpjcjUaLtE&#34;,
-            &#34;_history&#34;: &#34;FbwPhhohM9oJ2RiZe6NOVCGxpc5Z-6jYgymCTa1J&#34;,
+            &#34;a&#34;: &#34;pO.BtCjXeyhjKdlZ3GwdvyrYWGXEAQb9ZijWnFXj&#34;,
+            &#34;_history&#34;: &#34;ZjxJ2WWJn82el.kX9ojvWDavSV8mReWcD3TAGgz1&#34;,
             &#34;df&#34;: &#34;q3_b71eb05c4be05eba7b6ae5a9245d5dd70b81b (content: 6X_dc8ccea3b2e46f1c78967fae98b692701dc99)&#34;
         }
     }
@@ -157,9 +157,9 @@ def openml(Xout=&#34;X&#34;, yout=&#34;y&#34;, name=&#34;iris&#34;, version=1):
         &#34;_history&#34;: &#34;idict--------------sklearn-1.0.1--openml&#34;,
         &#34;_id&#34;: &#34;idict--------------sklearn-1.0.1--openml&#34;,
         &#34;_ids&#34;: {
-            &#34;X&#34;: &#34;3mesqBlZZACO6sy.bZQCc.uyT3vAX0I5JQxOmclE&#34;,
-            &#34;y&#34;: &#34;9.w77PtmNX2vQh25rxwCe6MvK5cU1O-FiMwM4tew&#34;,
-            &#34;_history&#34;: &#34;x5RUSWzvXYmS2WrFfopoDhMo9xC4Zkki-NRROJOc&#34;
+            &#34;X&#34;: &#34;KkSoAvgPmGq52PvPBqGFCEp9cSUCfb7eht9VpUdr&#34;,
+            &#34;y&#34;: &#34;aUvIFn8094CRcfDRzrN1mjxEdkYnbBAiLiOUicIs&#34;,
+            &#34;_history&#34;: &#34;miMBPEskz2sHRJKKHQVb1tnaOGFRtnjxZGYCxist&#34;
         }
     }
     &gt;&gt;&gt; (Ø &gt;&gt; openml).X.head()
@@ -199,9 +199,9 @@ def arff2df(input=&#34;arff&#34;, output=&#34;df&#34;, **kwargs):
         &#34;arff&#34;: &#34;@RELATION mini\n@ATTRIBUTE attr1\tREAL\n@ATTRIBUTE attr2 \tREAL\n@ATTRIBUTE class \t{0,1}\n@DATA\n5.1,3.5,0\n3.1,4.5,1&#34;,
         &#34;_id&#34;: &#34;XraBH1sOCC.9ohqV3hfIRTE5FV3.0.1--arff2df&#34;,
         &#34;_ids&#34;: {
-            &#34;df&#34;: &#34;UANHM97QvqLnnzzID7JTDbqRpqUQX-K1K4AEnTby&#34;,
-            &#34;_name&#34;: &#34;gSpa-e2rKoEZwN4N9d5bs83RCbE82M1Cj0zC585q&#34;,
-            &#34;_history&#34;: &#34;ltnWRK7riNIANfskLtRiJOT3rmmQYmhmZxP.N2Yi&#34;,
+            &#34;df&#34;: &#34;GCkwy4oI.s5m.pFcLGaH8kpw-djkkfftwsc5Hdj5&#34;,
+            &#34;_name&#34;: &#34;K4gZ2YDXBHOHwPzYufHChxkfhSz7ZAr--YbuHM-o&#34;,
+            &#34;_history&#34;: &#34;.27HRUkG1mSTh3YQOzye1BN4UoUlFhnyvdyHU3XM&#34;,
             &#34;arff&#34;: &#34;Z._c3e2b235b697e9734b9ec13084129dc30e45b (content: Ev_8bb973161e5ae900c5743b3c332b4a64d1955)&#34;
         }
     }
@@ -227,6 +227,13 @@ def arff2df(input=&#34;arff&#34;, output=&#34;df&#34;, **kwargs):
     return {output: df, &#34;_name&#34;: relation, &#34;_history&#34;: ...}
 
 
+Xy2M.metadata = {
+    &#34;id&#34;: &#34;idict--pandas-1.3.4--sklearn-1.0.1--Xy2M&#34;,
+    &#34;name&#34;: &#34;Xy2M&#34;,
+    &#34;description&#34;: &#34;X,y (pandas/numpy) to M (numpy) column concatenator.&#34;,
+    &#34;parameters&#34;: ...,
+    &#34;code&#34;: ...,
+}
 df2Xy.metadata = {
     &#34;id&#34;: &#34;idict-pandas-1.3.4--sklearn-1.0.1--df2Xy&#34;,
     &#34;name&#34;: &#34;df2Xy&#34;,
@@ -328,7 +335,7 @@ array([[ 5.1,  6.4,  0. ],
     &#34;&#34;&#34;
     import numpy
 
-    return {output: numpy.column_stack((kwargs[input[0]], kwargs[input[1]]))}</code></pre>
+    return {output: numpy.column_stack((kwargs[input[0]], kwargs[input[1]])), &#34;_history&#34;: ...}</code></pre>
 </details>
 </dd>
 <dt id="idict.function.dataset.arff2df"><code class="name flex">
@@ -348,9 +355,9 @@ array([[ 5.1,  6.4,  0. ],
     &quot;arff&quot;: &quot;@RELATION mini\n@ATTRIBUTE attr1\tREAL\n@ATTRIBUTE attr2 \tREAL\n@ATTRIBUTE class \t{0,1}\n@DATA\n5.1,3.5,0\n3.1,4.5,1&quot;,
     &quot;_id&quot;: &quot;XraBH1sOCC.9ohqV3hfIRTE5FV3.0.1--arff2df&quot;,
     &quot;_ids&quot;: {
-        &quot;df&quot;: &quot;UANHM97QvqLnnzzID7JTDbqRpqUQX-K1K4AEnTby&quot;,
-        &quot;_name&quot;: &quot;gSpa-e2rKoEZwN4N9d5bs83RCbE82M1Cj0zC585q&quot;,
-        &quot;_history&quot;: &quot;ltnWRK7riNIANfskLtRiJOT3rmmQYmhmZxP.N2Yi&quot;,
+        &quot;df&quot;: &quot;GCkwy4oI.s5m.pFcLGaH8kpw-djkkfftwsc5Hdj5&quot;,
+        &quot;_name&quot;: &quot;K4gZ2YDXBHOHwPzYufHChxkfhSz7ZAr--YbuHM-o&quot;,
+        &quot;_history&quot;: &quot;.27HRUkG1mSTh3YQOzye1BN4UoUlFhnyvdyHU3XM&quot;,
         &quot;arff&quot;: &quot;Z._c3e2b235b697e9734b9ec13084129dc30e45b (content: Ev_8bb973161e5ae900c5743b3c332b4a64d1955)&quot;
     }
 }
@@ -380,9 +387,9 @@ array([[ 5.1,  6.4,  0. ],
         &#34;arff&#34;: &#34;@RELATION mini\n@ATTRIBUTE attr1\tREAL\n@ATTRIBUTE attr2 \tREAL\n@ATTRIBUTE class \t{0,1}\n@DATA\n5.1,3.5,0\n3.1,4.5,1&#34;,
         &#34;_id&#34;: &#34;XraBH1sOCC.9ohqV3hfIRTE5FV3.0.1--arff2df&#34;,
         &#34;_ids&#34;: {
-            &#34;df&#34;: &#34;UANHM97QvqLnnzzID7JTDbqRpqUQX-K1K4AEnTby&#34;,
-            &#34;_name&#34;: &#34;gSpa-e2rKoEZwN4N9d5bs83RCbE82M1Cj0zC585q&#34;,
-            &#34;_history&#34;: &#34;ltnWRK7riNIANfskLtRiJOT3rmmQYmhmZxP.N2Yi&#34;,
+            &#34;df&#34;: &#34;GCkwy4oI.s5m.pFcLGaH8kpw-djkkfftwsc5Hdj5&#34;,
+            &#34;_name&#34;: &#34;K4gZ2YDXBHOHwPzYufHChxkfhSz7ZAr--YbuHM-o&#34;,
+            &#34;_history&#34;: &#34;.27HRUkG1mSTh3YQOzye1BN4UoUlFhnyvdyHU3XM&#34;,
             &#34;arff&#34;: &#34;Z._c3e2b235b697e9734b9ec13084129dc30e45b (content: Ev_8bb973161e5ae900c5743b3c332b4a64d1955)&#34;
         }
     }
@@ -423,9 +430,9 @@ array([[ 5.1,  6.4,  0. ],
     &quot;df&quot;: &quot;«{'attr1@REAL': {0: 5.1, 1: 3.1}, 'attr2@REAL': {0: 3.5, 1: 4.5}, 'class@{0,1}': {0: '0', 1: '1'}}»&quot;,
     &quot;_id&quot;: &quot;0GLFP05fQeW7dVFF0m50N8yVTgl-1.0.1--df2Xy&quot;,
     &quot;_ids&quot;: {
-        &quot;X&quot;: &quot;hooghJAIuzoXue9tSVrWrU9ek4Rw--J2NP7DnTVR&quot;,
-        &quot;y&quot;: &quot;UldviM8Kn.smh66ZP7X-D9M1k9IQ4M0DmL6B58PJ&quot;,
-        &quot;_history&quot;: &quot;5ItBBxGIMLsBTpdvIGaFHpdkk.2ERtilWaL0O2e.&quot;,
+        &quot;X&quot;: &quot;NeRaymrp6pcRWPAFc4t8A9.BnboEM0.1BllNL8yo&quot;,
+        &quot;y&quot;: &quot;BLW9uncfc4h7G4e1lK66TjtG5bj6uMX2oEJxZBbm&quot;,
+        &quot;_history&quot;: &quot;wfGnutW0WADjXhbuxxKPp5WD5po2Jk6W4srWxjdQ&quot;,
         &quot;df&quot;: &quot;q3_b71eb05c4be05eba7b6ae5a9245d5dd70b81b (content: 6X_dc8ccea3b2e46f1c78967fae98b692701dc99)&quot;
     }
 }
@@ -449,9 +456,9 @@ array([0, 1])
         &#34;df&#34;: &#34;«{&#39;attr1@REAL&#39;: {0: 5.1, 1: 3.1}, &#39;attr2@REAL&#39;: {0: 3.5, 1: 4.5}, &#39;class@{0,1}&#39;: {0: &#39;0&#39;, 1: &#39;1&#39;}}»&#34;,
         &#34;_id&#34;: &#34;0GLFP05fQeW7dVFF0m50N8yVTgl-1.0.1--df2Xy&#34;,
         &#34;_ids&#34;: {
-            &#34;X&#34;: &#34;hooghJAIuzoXue9tSVrWrU9ek4Rw--J2NP7DnTVR&#34;,
-            &#34;y&#34;: &#34;UldviM8Kn.smh66ZP7X-D9M1k9IQ4M0DmL6B58PJ&#34;,
-            &#34;_history&#34;: &#34;5ItBBxGIMLsBTpdvIGaFHpdkk.2ERtilWaL0O2e.&#34;,
+            &#34;X&#34;: &#34;NeRaymrp6pcRWPAFc4t8A9.BnboEM0.1BllNL8yo&#34;,
+            &#34;y&#34;: &#34;BLW9uncfc4h7G4e1lK66TjtG5bj6uMX2oEJxZBbm&#34;,
+            &#34;_history&#34;: &#34;wfGnutW0WADjXhbuxxKPp5WD5po2Jk6W4srWxjdQ&#34;,
             &#34;df&#34;: &#34;q3_b71eb05c4be05eba7b6ae5a9245d5dd70b81b (content: 6X_dc8ccea3b2e46f1c78967fae98b692701dc99)&#34;
         }
     }
@@ -481,8 +488,8 @@ array([0, 1])
     &quot;df&quot;: &quot;«{'attr1@REAL': {0: 5.1, 1: 3.1}, 'attr2@REAL': {0: 3.5, 1: 4.5}, 'class@{0,1}': {0: '0', 1: '1'}}»&quot;,
     &quot;_id&quot;: &quot;Ojq9k7ZSbVjwLGlZ7uuqIyhoJPo.p36mAmav2Wul&quot;,
     &quot;_ids&quot;: {
-        &quot;a&quot;: &quot;yfX.AOVXE2hlKyGKeGZ3Klpi3LYxm3PpjcjUaLtE&quot;,
-        &quot;_history&quot;: &quot;FbwPhhohM9oJ2RiZe6NOVCGxpc5Z-6jYgymCTa1J&quot;,
+        &quot;a&quot;: &quot;pO.BtCjXeyhjKdlZ3GwdvyrYWGXEAQb9ZijWnFXj&quot;,
+        &quot;_history&quot;: &quot;ZjxJ2WWJn82el.kX9ojvWDavSV8mReWcD3TAGgz1&quot;,
         &quot;df&quot;: &quot;q3_b71eb05c4be05eba7b6ae5a9245d5dd70b81b (content: 6X_dc8ccea3b2e46f1c78967fae98b692701dc99)&quot;
     }
 }
@@ -505,8 +512,8 @@ array([0, 1])
         &#34;df&#34;: &#34;«{&#39;attr1@REAL&#39;: {0: 5.1, 1: 3.1}, &#39;attr2@REAL&#39;: {0: 3.5, 1: 4.5}, &#39;class@{0,1}&#39;: {0: &#39;0&#39;, 1: &#39;1&#39;}}»&#34;,
         &#34;_id&#34;: &#34;Ojq9k7ZSbVjwLGlZ7uuqIyhoJPo.p36mAmav2Wul&#34;,
         &#34;_ids&#34;: {
-            &#34;a&#34;: &#34;yfX.AOVXE2hlKyGKeGZ3Klpi3LYxm3PpjcjUaLtE&#34;,
-            &#34;_history&#34;: &#34;FbwPhhohM9oJ2RiZe6NOVCGxpc5Z-6jYgymCTa1J&#34;,
+            &#34;a&#34;: &#34;pO.BtCjXeyhjKdlZ3GwdvyrYWGXEAQb9ZijWnFXj&#34;,
+            &#34;_history&#34;: &#34;ZjxJ2WWJn82el.kX9ojvWDavSV8mReWcD3TAGgz1&#34;,
             &#34;df&#34;: &#34;q3_b71eb05c4be05eba7b6ae5a9245d5dd70b81b (content: 6X_dc8ccea3b2e46f1c78967fae98b692701dc99)&#34;
         }
     }
@@ -530,9 +537,9 @@ array([0, 1])
     &quot;_history&quot;: &quot;idict--------------sklearn-1.0.1--openml&quot;,
     &quot;_id&quot;: &quot;idict--------------sklearn-1.0.1--openml&quot;,
     &quot;_ids&quot;: {
-        &quot;X&quot;: &quot;3mesqBlZZACO6sy.bZQCc.uyT3vAX0I5JQxOmclE&quot;,
-        &quot;y&quot;: &quot;9.w77PtmNX2vQh25rxwCe6MvK5cU1O-FiMwM4tew&quot;,
-        &quot;_history&quot;: &quot;x5RUSWzvXYmS2WrFfopoDhMo9xC4Zkki-NRROJOc&quot;
+        &quot;X&quot;: &quot;KkSoAvgPmGq52PvPBqGFCEp9cSUCfb7eht9VpUdr&quot;,
+        &quot;y&quot;: &quot;aUvIFn8094CRcfDRzrN1mjxEdkYnbBAiLiOUicIs&quot;,
+        &quot;_history&quot;: &quot;miMBPEskz2sHRJKKHQVb1tnaOGFRtnjxZGYCxist&quot;
     }
 }
 &gt;&gt;&gt; (Ø &gt;&gt; openml).X.head()
@@ -565,9 +572,9 @@ Categories (3, object): ['Iris-setosa', 'Iris-versicolor', 'Iris-virginica']
         &#34;_history&#34;: &#34;idict--------------sklearn-1.0.1--openml&#34;,
         &#34;_id&#34;: &#34;idict--------------sklearn-1.0.1--openml&#34;,
         &#34;_ids&#34;: {
-            &#34;X&#34;: &#34;3mesqBlZZACO6sy.bZQCc.uyT3vAX0I5JQxOmclE&#34;,
-            &#34;y&#34;: &#34;9.w77PtmNX2vQh25rxwCe6MvK5cU1O-FiMwM4tew&#34;,
-            &#34;_history&#34;: &#34;x5RUSWzvXYmS2WrFfopoDhMo9xC4Zkki-NRROJOc&#34;
+            &#34;X&#34;: &#34;KkSoAvgPmGq52PvPBqGFCEp9cSUCfb7eht9VpUdr&#34;,
+            &#34;y&#34;: &#34;aUvIFn8094CRcfDRzrN1mjxEdkYnbBAiLiOUicIs&#34;,
+            &#34;_history&#34;: &#34;miMBPEskz2sHRJKKHQVb1tnaOGFRtnjxZGYCxist&#34;
         }
     }
     &gt;&gt;&gt; (Ø &gt;&gt; openml).X.head()
