@@ -1,1 +1,2 @@
 Fix decomposition of f result to reflect unambiguous ids
+Complete Xy2M metadata
